2004-01-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* unix/INSTALL: Added simple installation instructions.

2004-01-08  David N. Welton  <davidw@dedasys.com>

	* generic/TclMagick.c (drawObjCmd): Sub-switches need 'default'
	case to avoid warnings caused by options not handled.
	* generic/TclMagick.c: Cast a few enum's to ints when used as
	arguments to Tcl_NewIntObj.

2004-01-07  Rolf Schroedter <rolf.schroedter@dlr.de>

	* Fixes for a few GCC warnings:

2004-01-07  David N. Welton  <davidw@dedasys.com>

	* unix/configure.ac: Use configure.ac instead of configure.in.

	* ChangeLog: Undid CRLF line-end formatting.

	* unix/configure.in: Updated configure system from latest Tcl
	sample extension.  Added a few things to configure.in to pick up
	flags from GraphicsMagickWand-config, which must be in the PATH.

2004-01-07  Rolf Schroedter <rolf.schroedter@dlr.de>

	* API rename: CloneImage --> GetImage
	* Added API's
		SetFillPatternURL url
		SetStrokePatternURL url

2004-01-06  Rolf Schroedter <rolf.schroedter@dlr.de>

	* Added missing tests for new API's
	* A few problems reported to ImageMagick

2004-01-05  Rolf Schroedter <rolf.schroedter@dlr.de>

	* Review of ImageMagick-API completeness
	* API renamed: wandName GetNumberOfImages ==> GetNumberImages
	* Two cloning methods: CloneMagickWand & MagickCloneImage
	* Optional argument for [magick fonts|formats ?pattern?]

2003-12-30  Rolf Schroedter <rolf.schroedter@dlr.de>

	* PixelWand: Added support for colors cyan,magenta,yellow,black
	incl. test-pixel.tcl

	* struct PointInfo (DrawBezier/Polygon/Polyline)
	may in future contain Z-component, initialize it properly
	
	* Updated docs of Set(Get)Fill(Stroke,TextUnder)Color subcommands
	
2003-12-29  David N. Welton  <davidw@dedasys.com>

	* Redid directory trees.  Hopefully for the last time this
	evening:-)

2003-12-29  Rolf Schroedter <rolf.schroedter@dlr.de>

	* Minor header file changes in ImageMagick

        * API changes: