@@ -2983,13 +2983,11 @@ wandName ScaleImage x y</div></td>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName clippath <br>
-          drawName clippath name <br>
+        <p>drawName clippath ?name? <br>
           drawName GetClipPath <br>
         drawName SetClipPath name</p>
     </div></td>
-    <td><div align="left">DrawGetClipPath<br>
-      DrawSetClipPath<br>
+    <td><div align="left">DrawGet/SetClipPath<br>
       DrawGetClipPath<br>
       DrawSetClipPath</div></td>
   </tr>
@@ -3003,13 +3001,11 @@ wandName ScaleImage x y</div></td>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName cliprule <br>
-          drawName cliprule rule <br>
+        <p>drawName cliprule ?rule?<br>
           drawName GetClipRule <br>
         drawName SetClipRule rule</p>
     </div></td>
-    <td><div align="left">DrawGetClipRule<br>
-      DrawSetClipRule<br>
+    <td><div align="left">DrawGet/SetClipRule<br>
       DrawGetClipRule<br>
       DrawSetClipRule</div></td>
   </tr>
@@ -3023,13 +3019,11 @@ wandName ScaleImage x y</div></td>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName clipunits <br>
-          drawName clipunits unit <br>
+        <p>drawName clipunits ?unit? <br>
           drawName GetClipUnits <br>
         drawName SetClipUnits unit</p>
     </div></td>
-    <td><div align="left">DrawGetClipUnits<br>
-      DrawSetClipUnits<br>
+    <td><div align="left">DrawGet/SetClipUnits<br>
       DrawGetClipUnits<br>
       DrawSetClipUnits</div></td>
   </tr>
@@ -3092,13 +3086,11 @@ wandName ScaleImage x y</div></td>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName fillcolor <br>
-          drawName fillcolor pixelName<br>
+        <p>          drawName fillcolor ?pixelName?<br>
           drawName GetFillColor <br>
-          drawName SetFillColor pixelName</p>
+        drawName SetFillColor pixelName</p>
     </div></td>
-    <td><div align="left">DrawGetFillColor<br>
-      DrawSetFillColor<br>
+    <td><div align="left">DrawGet/SetFillColor<br>
       DrawGetFillColor<br>
       DrawSetFillColor<br>
       </div></td>
@@ -3113,13 +3105,11 @@ wandName ScaleImage x y</div></td>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName fillopacity <br>
-          drawName fillopacity value <br>
+        <p>drawName fillopacity ?value? <br>
           drawName GetFillOpacity <br>
         drawName SetFillOpacity value </p>
     </div></td>
-    <td><div align="left">DrawGetFillOpacity<br>
-      DrawSetFillOpacity<br>
+    <td><div align="left">DrawGet/SetFillOpacity<br>
       DrawGetFillOpacity<br>
       DrawSetFillOpacity</div></td>
   </tr>
@@ -3145,13 +3135,11 @@ DrawSetFillPatternURL</td>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName fillrule <br>
-          drawName fillrule rule <br>
+        <p>drawName fillrule ?rule? <br>
           drawName GetFillRule <br>
         drawName SetFillRule rule </p>
     </div></td>
-    <td><div align="left">DrawGetFillRule<br>
-      DrawSetFillRule<br>
+    <td><div align="left">DrawGet/SetFillRule<br>
       DrawGetFillRule<br>
       DrawSetFillRule</div></td>
   </tr>
@@ -3165,13 +3153,11 @@ DrawSetFillPatternURL</td>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName font <br>
-          drawName font fontname <br>
+        <p>drawName font ?fontname? <br>
           drawName GetFont <br>
         drawName SetFont fontname </p>
     </div></td>
-    <td><div align="left">DrawGetFont<br>
-      DrawSetFont<br>
+    <td><div align="left">DrawGet/SetFont<br>
       DrawGetFont<br>
       DrawSetFont</div></td>
   </tr>
@@ -3185,13 +3171,11 @@ DrawSetFillPatternURL</td>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName fontfamily <br>
-          drawName fontfamily name <br>
+        <p>drawName fontfamily ?name? <br>
           drawName GetFontFamily <br>
         drawName SetFontFamily name </p>
     </div></td>
-    <td><div align="left"> DrawGetFontFamily<br>
-DrawSetFontFamily<br>
+    <td><div align="left"> DrawGet/SetFontFamily<br>
 DrawGetFontFamily<br>
 DrawSetFontFamily</div></td>
   </tr>
@@ -3205,13 +3189,11 @@ DrawSetFontFamily</div></td>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName fontsize <br>
-          drawName fontsize value <br>
+        <p>drawName fontsize ?value? <br>
           drawName GetFontSize <br>
         drawName SetFontSize value </p>
     </div></td>
-    <td><div align="left">DrawGetFontSize<br>
-      DrawSetFontSize<br>
+    <td><div align="left">DrawGet/SetFontSize<br>
       DrawGetFontSize<br>
       DrawSetFontSize</div></td>
   </tr>
@@ -3225,13 +3207,11 @@ DrawSetFontFamily</div></td>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName fontstretch <br>
-          drawName fontstretch stretchType <br>
+        <p>drawName fontstretch ?stretchType? <br>
           drawName GetFontStretch <br>
         drawName SetFontStretch stretchType</p>
     </div></td>
-    <td><div align="left">DrawGetFontStretch<br>
-      DrawSetFontStretch<br>
+    <td><div align="left">DrawGet/SetFontStretch<br>
       DrawGetFontStretch<br>
       DrawSetFontStretch</div></td>
   </tr>
@@ -3245,13 +3225,11 @@ DrawSetFontFamily</div></td>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName fontstyle <br>
-          drawName fontstyle style <br>
+        <p>drawName fontstyle ?style? <br>
           drawName GetFontStyle <br>
         drawName SetFontStyle style </p>
     </div></td>
-    <td><div align="left">DrawGetFontStyle<br>
-      DrawSetFontStyle<br>
+    <td><div align="left">DrawGet/SetFontStyle<br>
       DrawGetFontStyle<br>
       DrawSetFontStyle</div></td>
   </tr>
@@ -3265,13 +3243,11 @@ DrawSetFontFamily</div></td>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName fontweight <br>
-          drawName fontweight value <br>
+        <p>drawName fontweight ?value? <br>
           drawName GetFontWeight <br>
         drawName SetFontWeight value </p>
     </div></td>
-    <td><div align="left">DrawGetFontWeight<br>
-      DrawSetFontWeight<br>
+    <td><div align="left">DrawGet/SetFontWeight<br>
       DrawGetFontWeight<br>
       DrawSetFontWeight</div></td>
   </tr>
@@ -3285,13 +3261,11 @@ DrawSetFontFamily</div></td>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName gravity <br>
-          drawName gravity gravityType <br>
+        <p>drawName gravity ?gravityType <br>
           drawName GetGravity <br>
         drawName SetGravity gravityType </p>
     </div></td>
-    <td><div align="left">DrawGetGravity<br>
-      DrawSetGravity<br>
+    <td><div align="left">DrawGet/SetGravity<br>
       DrawGetGravity<br>
       DrawSetGravity</div></td>
   </tr>
@@ -3606,14 +3580,12 @@ DrawRoundRectangle<br>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName strokecolor <br>
-          drawName strokecolor pixelName<br>
+        <p>drawName strokecolor ?pixelName?<br>
           drawName GetStrokeColor <br>
           drawName SetStrokeColor pixelName<br>
         </p>
     </div></td>
-    <td><div align="left">DrawGetStrokeColor<br>
-      DrawSetStrokeColor<br>
+    <td><div align="left">DrawGet/SetStrokeColor<br>
       DrawGetStrokeColor<br>
       DrawSetStrokeColor<br>
       </div></td>
@@ -3628,13 +3600,11 @@ DrawRoundRectangle<br>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName strokeantialias <br>
-          drawName strokeantialias flag <br>
+        <p>drawName strokeantialias ?flag?<br>
           drawName GetStrokeAntialias <br>
         drawName SetStrokeAntialias flag</p>
     </div></td>
-    <td><div align="left">DrawGetStrokeAntialias<br>
-      DrawSetStrokeAntialias<br>
+    <td><div align="left">DrawGet/SetStrokeAntialias<br>
       DrawGetStrokeAntialias<br>
       DrawSetStrokeAntialias</div></td>
   </tr>
@@ -3672,13 +3642,11 @@ DrawRoundRectangle<br>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName strokedashoffset <br>
-          drawName strokedashoffset val <br>
+        <p>drawName strokedashoffset ?val? <br>
           drawName GetStrokeDashOffset <br>
         drawName SetStrokeDashOffset val</p>
     </div></td>
-    <td><div align="left">DrawGetStrokeDashOffset<br>
-      DrawSetStrokeDashOffset<br>
+    <td><div align="left">DrawGet/SetStrokeDashOffset<br>
       DrawGetStrokeDashOffset<br>
       DrawSetStrokeDashOffset</div></td>
   </tr>
@@ -3692,13 +3660,11 @@ DrawRoundRectangle<br>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName strokelinecap <br>
-          drawName strokelinecap linecapType <br>
+        <p>drawName strokelinecap ?linecapType? <br>
           drawName GetStrokeLineCap <br>
         drawName SetStrokeLineCap linecapType</p>
     </div></td>
-    <td><div align="left">DrawGetStrokeLineCap<br>
-      DrawSetStrokeLineCap<br>
+    <td><div align="left">DrawGet/SetStrokeLineCap<br>
       DrawGetStrokeLineCap<br>
       DrawSetStrokeLineCap</div></td>
   </tr>
@@ -3712,13 +3678,11 @@ DrawRoundRectangle<br>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName strokelinejoin <br>
-          drawName strokelinejoin linejoinType <br>
+        <p>drawName strokelinejoin ?linejoinType? <br>
           drawName GetStrokeLineJoin <br>
         drawName SetStrokeLineJoin linejoinType</p>
     </div></td>
-    <td><div align="left">DrawGetStrokeLineJoin<br>
-      DrawSetStrokeLineJoin<br>
+    <td><div align="left">DrawGet/SetStrokeLineJoin<br>
       DrawGetStrokeLineJoin<br>
       DrawSetStrokeLineJoin</div></td>
   </tr>
@@ -3732,13 +3696,11 @@ DrawRoundRectangle<br>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName strokemiterlimit <br>
-          drawName strokemiterlimit val <br>
+        <p>drawName strokemiterlimit ?val? <br>
           drawName GetStrokeMiterLimit <br>
         drawName SetStrokeMiterLimit val</p>
     </div></td>
-    <td><div align="left">DrawGetStrokeMiterLimit<br>
-      DrawSetStrokeMiterLimit<br>
+    <td><div align="left">DrawGet/SetStrokeMiterLimit<br>
       DrawGetStrokeMiterLimit<br>
       DrawSetStrokeMiterLimit</div></td>
   </tr>
@@ -3752,13 +3714,11 @@ DrawRoundRectangle<br>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName strokeopacity <br>
-          drawName strokeopacity val <br>
+        <p>drawName strokeopacity ?val? <br>
           drawName GetStrokeOpacity <br>
         drawName SetStrokeOpacity val</p>
     </div></td>
-    <td><div align="left">DrawGetStrokeOpacity<br>
-      DrawSetStrokeOpacity<br>
+    <td><div align="left">DrawGet/SetStrokeOpacity<br>
       DrawGetStrokeOpacity<br>
       DrawSetStrokeOpacity</div></td>
   </tr>
@@ -3784,13 +3744,11 @@ DrawRoundRectangle<br>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName strokewidth <br>
-          drawName strokewidth val <br>
+        <p>drawName strokewidth ?val? <br>
           drawName GetStrokeWidth <br>
         drawName SetStrokeWidth val</p>
     </div></td>
-    <td><div align="left">DrawGetStrokeWidth<br>
-      DrawSetStrokeWidth<br>
+    <td><div align="left">DrawGet/SetStrokeWidth<br>
       DrawGetStrokeWidth<br>
       DrawSetStrokeWidth</div></td>
   </tr>
@@ -3804,13 +3762,11 @@ DrawRoundRectangle<br>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName textantialias <br>
-          drawName textantialias flag <br>
+        <p>drawName textantialias ?flag? <br>
           drawName GetTextAntialias <br>
         drawName SetTextAntialias flag </p>
     </div></td>
-    <td><div align="left">DrawGetTextAntialias<br>
-      DrawSetTextAntialias<br>
+    <td><div align="left">DrawGet/SetTextAntialias<br>
       DrawGetTextAntialias<br>
       DrawSetTextAntialias</div></td>
   </tr>
@@ -3824,13 +3780,11 @@ DrawRoundRectangle<br>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName textdecoration <br>
-          drawName textdecoration decorationType <br>
+        <p>drawName textdecoration ?decorationType? <br>
           drawName GeTextDecoration <br>
         drawName SetTextDecoration decorationType</p>
     </div></td>
-    <td><div align="left">DrawGetTextDecoration<br>
-      DrawSetTextDecoration<br>
+    <td><div align="left">DrawGet/SetTextDecoration<br>
       DrawGetTextDecoration<br>
       DrawSetTextDecoration</div></td>
   </tr>
@@ -3844,13 +3798,11 @@ DrawRoundRectangle<br>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName textencoding <br>
-          drawName textencoding string <br>
+        <p>drawName textencoding ?string <br>
           drawName GetTextEncoding <br>
         drawName SetTextEncoding string</p>
     </div></td>
-    <td><div align="left"> DrawGetTextEncoding<br>
-DrawSetTextEncoding<br>
+    <td><div align="left"> DrawGet/SetTextEncoding<br>
 DrawGetTextEncoding<br>
 DrawSetTextEncoding</div></td>
   </tr>
@@ -3864,13 +3816,11 @@ DrawSetTextEncoding</div></td>
   </tr>
   <tr>
     <td><div align="left">
-        <p>drawName textundercolor <br>
-          drawName textundercolor pixelName<br>
+        <p>drawName textundercolor ?pixelName?<br>
           drawName GetTextUnderColor <br>
         drawName SetTextUnderColor pixelName</p>
     </div></td>
-    <td><div align="left">DrawGetTextUnderColor<br>
-      DrawSetTextUnderColor<br>
+    <td><div align="left">DrawGet/SetTextUnderColor<br>
       DrawGetTextUnderColor<br>
 DrawSetTextUnderColor</div></td>
   </tr>
