@@ -1,3 +1,10 @@
+2004-01-08  Rolf Schroedter <rolf.schroedter@dlr.de>
+
+	* Fixed DRAW incompatibility between to Wand color settings:
+	  Now the call is [$draw XXXcolor ?pix?]
+	* Updated DRAW documentation
+
+
 2004-01-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* unix/INSTALL: Added simple installation instructions.
